test/Fail/LocalRewriteConstraint.err
LocalRewriteConstraint.agda:15.17-18: error: [UnequalTerms]
The terms
  x
and
  zero
are not equal at type Nat
when checking that the expression p has type x ≡ 
